<?xml version="1.0" encoding="UTF-8"?>
<!--
/* (c) 2023 Open Source Geospatial Foundation - all rights reserved
 * This code is licensed under the GPL 2.0 license, available at the root
 * application directory.
 */
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.geoserver.acl.integration.openapi</groupId>
    <artifactId>openapi-integration</artifactId>
    <version>${revision}</version>
  </parent>
  <artifactId>gs-acl-api-client</artifactId>
  <properties>
    <java.version>11</java.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.geoserver.acl.openapi.spring5</groupId>
      <artifactId>gs-acl-openapi-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.geoserver.acl.integration.openapi</groupId>
      <artifactId>gs-acl-api-model-mapper</artifactId>
    </dependency>
    <dependency>
      <groupId>org.geoserver.acl.domain</groupId>
      <artifactId>gs-acl-accessrules</artifactId>
    </dependency>
    <dependency>
      <groupId>org.geoserver.acl.domain</groupId>
      <artifactId>gs-acl-adminrules</artifactId>
    </dependency>
    <dependency>
      <groupId>org.geoserver.acl</groupId>
      <artifactId>gs-acl-authorization-api</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-smile</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
